--- a/src/App.css
+++ b/src/App.css
@@ -12,21 +12,34 @@
 }
 
 .btn-box {
-	width: 90%;
-	margin: auto;
+	width: 95%;
+	margin: calc(95% - auto);
 	padding: 1em;
 	border: 1px solid black;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+	flex-wrap: wrap;
+	gap: 1rem;
 	position: relative;
-	top: 80%;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+
+	button {
+		padding: 0.5em 1em;
+		border-radius: 0.2em;
+		border: 1px solid gray;
+		font-size: 1rem;
+		font-weight: bold;
+		cursor: pointer;
+	}
 }
 
-button {
-	padding: 0.5em 1em;
-	border-radius: 0.2em;
-	border: 1px solid gray;
-	font-size: 2rem;
-	font-weight: bold;
+@media (min-width: 1000px) {
+	.btn-box {
+		button {
+			font-size: 2rem;
+		}
+	}
 }
